--- a/Phase_3/web/templates/searchcustomer.html
+++ b/Phase_3/web/templates/searchcustomer.html
@@ -8,7 +8,7 @@
     <form action="/searchcustomer" method="POST">
       
       <div class="form-group">
-          <label for="manufacturer">Choose customer type</label>
+          <label for="customer_type">Choose customer type</label>
           <select class="form-control" id="customer_type" name="customer_type">
             <option value="Business">Business</option>
             <option value="Individual">Individual</option>
