--- a/Phase_3/web/templates/display_price_per_repair_table.html
+++ b/Phase_3/web/templates/display_price_per_repair_table.html
@@ -7,20 +7,20 @@
   <thead>
     <tr>
       <th scope="col">Vehicle Type</th>
-      <th scope="col">Condition=Excellent</th>
-      <th scope="col">Condition=Very Good</th>
-      <th scope="col">Condition=Good</th>
-      <th scope="col">Condition=Fair</th>
+      <th scope="col" class="text-right">Condition=Excellent</th>
+      <th scope="col" class="text-right">Condition=Very Good</th>
+      <th scope="col" class="text-right">Condition=Good</th>
+      <th scope="col" class="text-right">Condition=Fair</th>
     </tr>
   </thead>
   <tbody>
 	{% for item in data %}
 	<tr>
-	    <td>{{item[0]}}</td>
-	    <td>{{item[1]}}</td>
-	    <td>{{item[2]}}</td>
-	    <td>{{item[3]}}</td>
-      <td>{{item[4]}}</td>
+      <td>{{ item[0] }}</td>
+      <td class="text-right">{{ "$ {:,.0f}".format(item[1]) }}</td>
+      <td class="text-right">{{ "$ {:,.0f}".format(item[2]) }}</td>
+      <td class="text-right">{{ "$ {:,.0f}".format(item[3]) }}</td>
+      <td class="text-right">{{ "$ {:,.0f}".format(item[4]) }}</td>
 	</tr>
 	{% endfor %}
   </tbody>
