--- a/Phase_3/web/templates/display_repair_stats_table.html
+++ b/Phase_3/web/templates/display_repair_stats_table.html
@@ -7,20 +7,20 @@
   <thead>
     <tr>
       <th scope="col">Vendor Name</th>
-      <th scope="col">Number Of Repairs</th>
-      <th scope="col">Total Spend</th>
-      <th scope="col">Number Of Vehicles</th>
-      <th scope="col">Average Duration</th>
+      <th class="text-center" scope="col">Number Of Repairs</th>
+      <th class="text-center" scope="col">Total Spend</th>
+      <th class="text-center" scope="col">Number Of Vehicles</th>
+      <th class="text-center" scope="col">Average Duration (days)</th>
     </tr>
   </thead>
   <tbody>
 	{% for item in data %}
 	<tr>
 	    <td>{{item[0]}}</td>
-	    <td>{{item[1]}}</td>
-	    <td>{{item[2]}}</td>
-	    <td>{{item[3]}}</td>
-      <td>{{item[4]}}</td>
+	    <td class="text-center">{{item[1]}}</td>
+	    <td class="text-center">{{"$ {:,.2f}".format(item[2]) }}</td>
+	    <td class="text-center">{{item[3]}}</td>
+      <td class="text-center">{{"{:,.1f}".format(item[4]) }}</td>
 	</tr>
 	{% endfor %}
   </tbody>
