--- a/Phase_3/web/templates/repairs.html
+++ b/Phase_3/web/templates/repairs.html
@@ -35,7 +35,7 @@
 	    <td>{{item[2]}}</td>
 	    <td>{{item[3]}}</td>
 	    <td>{{item[4]}}</td>
-	    <td>{{item[5]}}</td>
+	    <td>${{item[5]}}</td>
 	    <td>{{item[6]}}</td>
 	    <td>{{item[7]}}</td>
     </tr>
