--- a/Phase_3/web/templates/searchvendor.html
+++ b/Phase_3/web/templates/searchvendor.html
@@ -3,6 +3,7 @@
 <!-- Page Content -->
 
 <div class="container">
+  {{session}}
     <form action="/searchvendor" method="POST">
       <div class="form-group">
           <label for="vendor_name">Enter Vendor Name</label>
@@ -11,7 +12,7 @@
       <button type="submit" class="btn btn-primary">Search vendor</button>
     </form>
 
-    {% if session.vendor.vendor_data[0] %}
+    {% if session.vendor.vendor_data %}
     <ul class="list-group">
         <li class="list-group-item">Vendor name: {{ session.vendor.vendor_name }}</li>
         <li class="list-group-item">Vendor phone: {{ session.vendor.vendor_data[0] }}</li>
@@ -22,7 +23,7 @@
     </ul>
     {% endif %}
     <br>
-    {% if not session.vendor.vendor_data[0] %}
+    {% if not session.vendor.vendor_data %}
     <ul class="list-group">
         <li class="list-group-item">No results</li>
     </ul>
