--- a/Phase_3/web/templates/main.html
+++ b/Phase_3/web/templates/main.html
@@ -34,7 +34,6 @@
           <option value="get_PricePerRepair">PricePerRepair</option>
           <option value="get_RepairStats">RepairStats</option>
           <option value="get_MonthlySales">MonthlySales</option>
-          <option value="get_MonthlySalesDrilldown">MonthlySalesDrilldown</option>
         </select>
         <div class="input-group-append">
           <input class="btn btn-warning" type="submit" value="View Report">
@@ -45,7 +44,7 @@
      
     {% endif %}
     {% if session.role == "Clerk" or session.role == "All Roles"%} 
-    <h3>Inventory: <a href="/addvehicletype">Add Vehicle</a></h3>
+    <h3>Inventory: <a href="/purchasevehicle">Add Vehicle</a></h3>
     <h3>Inventory: <a href="/repairs">Add Repair</a></h3>
     {% endif %}
      
