[MARCO] spruced up templates

--- a/Phase_3/web/templates/repairs.html
+++ b/Phase_3/web/templates/repairs.html
@@ -44,7 +44,7 @@
   </table>
   <p>
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-      Add new repair info
+      Add New Repair
     </button>
   </p>
   <div class="collapse" id="collapseExample">
