--- a/Phase_3/web/templates/purchasevehicle.html
+++ b/Phase_3/web/templates/purchasevehicle.html
@@ -113,7 +113,7 @@
                   <input type="text" class="form-control" id="vehicle_description" aria-describedby="emailHelp" placeholder="Enter description" name="vehicle_description">
               </div>
             <div class="form-group">
-                <label for="colors">Mutiple select list (hold shift to select more than one):</label>
+                <label for="colors">Select Color(s) (Mutiple select list - hold shift to select more than one):</label>
                 <select multiple class="form-control" id="colors" name="colors" required>
                   {% for color in colors %}
                     <option value="{{ color }}">{{ color }}</option>
