--- a/Phase_3/web/templates/vehicledetail.html
+++ b/Phase_3/web/templates/vehicledetail.html
@@ -81,7 +81,8 @@
 
 <br>
 
-{% if session.role in ('Sales Person', 'All Roles')%}
+<!-- Vehicle Purchase Information -->
+{% if session.role in ('Manager', 'All Roles')%}
 <div class="card">
 <div class="card-header text-center alert-primary">
     Vehicle Purchase Information
@@ -146,6 +147,8 @@
 </div>
 </div>
 {% endif %}
+
+<h2>NOTE ADD A REPAIRS SECTION </h2>
 
 <br>
 {% if session.role in ('Sales Person', 'All Roles')%}
