[MARCO] clearing search results when car is sold

--- a/Phase_3/web/templates/vehicledetail.html
+++ b/Phase_3/web/templates/vehicledetail.html
@@ -148,7 +148,7 @@
 </div>
 {% endif %}
 
-<h2>NOTE ADD A REPAIRS SECTION </h2>
+<h2>NOTE ADD A REPAIRS SECTION FOR CLERK AND BURDELL</h2>
 
 <br>
 {% if session.role in ('Sales Person', 'All Roles')%}
