[AM] adding more code to search vendor tying it to repairs

--- a/Phase_3/web/templates/repairs.html
+++ b/Phase_3/web/templates/repairs.html
@@ -46,6 +46,9 @@
     <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
       Add New Repair
     </button>
+    <a class="btn btn-primary" type="button" href="{{ '/searchvendor' }}" aria-expanded="false">
+      Search For Vendor Name
+    </a>
   </p>
   <div class="collapse" id="collapseExample">
     <div class="card card-body">
