--- a/Phase_3/web/templates/searchvendor.html
+++ b/Phase_3/web/templates/searchvendor.html
@@ -11,7 +11,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Search vendor</button>
     </form>
-
+    <h1>{{session.vendor}}</h1>>
     {% if session.vendor.vendor_data %}
     <ul class="list-group">
         <li class="list-group-item">Vendor name: {{ session.vendor.vendor_name }}</li>
