[AM] changed column name in repairs table

--- a/Phase_3/web/templates/repairs.html
+++ b/Phase_3/web/templates/repairs.html
@@ -24,7 +24,7 @@
       <th scope="col">NHTSA Recall Num</th>
       <th scope="col">Total Cost</th>
       <th scope="col">Repair Description</th>
-      <th scope="col">Vehicle Status</th>
+      <th scope="col">Vehicle Repair Status</th>
     </tr>
   </thead>
   <tbody>
