[AM] adding changes to app

--- a/Phase_3/web/templates/searchvendor.html
+++ b/Phase_3/web/templates/searchvendor.html
@@ -25,7 +25,7 @@
     <br>
     {% if not session.vendor.vendor_data %}
     <ul class="list-group">
-        <li class="list-group-item">No results, please add Vendor using the button below</li>
+        <li class="list-group-item">No results? Please add Vendor using the button below</li>
     </ul>
      <a class="btn btn-primary" href="{{ '/addvendor' }}" >Add New Vendor</a>
     {% endif %}
