[AM] adding changes to app

--- a/Phase_3/web/templates/display_seller_history_table.html
+++ b/Phase_3/web/templates/display_seller_history_table.html
@@ -6,7 +6,7 @@
   <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Customer Name</th>
+      <th scope="col">Name of Seller</th>
       <th class="text-center" scope="col">Vehicles Sold</th>
       <th class="text-center" scope="col">Avg Purchase Price</th>
       <th class="text-center" scope="col">Avg Number of Repairs</th>
