[AM] removing exclamation marks

--- a/Phase_3/web/templates/display_avg_time_in_inventory_table.html
+++ b/Phase_3/web/templates/display_avg_time_in_inventory_table.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-4">Average Time In Inventory Report!</h1>
+  <h1 class="mt-4">Average Time In Inventory Report</h1>
   <table class="table table-striped">
   <thead>
     <tr>
