--- a/Phase_3/web/templates/display_price_per_repair_table.html
+++ b/Phase_3/web/templates/display_price_per_repair_table.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-4">Price Per Repair Report!</h1>
+  <h1 class="mt-4">Price Per Condition Report</h1>
   <table class="table table-striped">
   <thead>
     <tr>
