--- a/Phase_3/web/templates/display_monthly_sales_drilldown_table.html
+++ b/Phase_3/web/templates/display_monthly_sales_drilldown_table.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-  <h1 class="mt-4">Monthly Sales Report Drilldown!</h1>
+  <h1 class="mt-4">Monthly Sales Report Drilldown</h1>
   <table class="table table-striped">
   <thead>
     <tr>
@@ -16,7 +16,7 @@
       <td>{{item[0]}}</td>
       <td>{{item[1]}}</td>
       <td>{{item[2]}}</td>
-      <td>{{item[3]}}</td>
+      <td>{{"$ {:,.0f}".format(item[3])}}</td>
     </tr>
     {% endfor %}
   </thead>
